@@ -1,4 +1,9 @@
 2013-04-13  Roland Winkler  <winkler@gnu.org>
+	* lisp/bbdb-com.el (bbdb-complete-mail): Simplify. Do not throw
+	error messages that prevent other completion functions to take
+	over.
+
+2013-04-13  Roland Winkler  <winkler@gnu.org>
 	* lisp/bbdb-vm.el (bbdb/vm-auto-folder-field)
 	(bbdb/vm-virtual-folder-field, bbdb/vm-auto-folder)
 	(bbdb/vm-auto-add-label-list, bbdb/vm-auto-add-label-field): Fix
